# macca

./: Cargo.toml  Makefile  README.md
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
src/: lib.rs
