[package]
name = "macca"
version = "0.1.0"
authors = ["Michael Pavlovsky <michael.pavlovsky@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "0.4.0"
wasmcloud-actor-core = { version = "0.2.2", features = ["guest"] }
serde_json = "1.0.59"
wasmcloud-actor-http-server = { version = "0.1.2", features = ["guest"]}
chrono = "0.4.19"


[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true

